human_written_tests/WebAssembly/processed_control_flow_validation/test_return_9.wast
(assert_invalid
  (module
    (func $type-value-empty-vs-num-in-return (result i32)
      (return (return))
    )
  )
  "type mismatch"
)